[package]
name = "portsentinel"
version = "0.1.0"
authors = ["Dallen Bishop <dallen.bishop@uvu.edu>"]
license = "MIT"

[dependencies]
config = "^0.11"
lazy_static = "1"
notify = "^4.0.0"
serde = { version = "1.0", features = ["derive"] }
ipnet = { version = "2.3.1", features = ["serde"] }
regex = "1"
chrono = "0.4"
nfqueue = "0.9"
libc = "0.2"
pnet = "0.26"
uuid = { version = "0.8.1", features = ["v4"] }
hex = "0.4.2"
mhteams = "0.1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }